<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@color/colorPrimary"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/background"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.094"
            android:id="@+id/textView" android:textColor="@color/colorAccent" android:textSize="30sp"
            android:fontFamily="@font/amiko_bold"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="391dp"
            android:layout_height="248dp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/linearLayout">
        <ToggleButton
                android:text="@string/david_hockney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/davidBtn"
                android:background="@drawable/toggle_btn2" android:textSize="24sp"
                android:fontFamily="@font/krona_one" android:textColor="#FFFFFF" android:textOff="@string/david_hockney"
                android:textOn="@string/david_hockney" android:onClick="davidClicked"/>
        <ToggleButton
                android:text="@string/henti_matisse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/matisseBtn"
                android:background="@drawable/toggle_btn2" android:textSize="24sp"
                android:fontFamily="@font/krona_one" android:textColor="#FFFFFF" android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" android:textOff="@string/henti_matisse" android:textOn="@string/henti_matisse"
                android:onClick="matisseClicked"/>
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/katzBtn"
                android:background="@drawable/toggle_btn2" android:textSize="24sp"
                android:fontFamily="@font/krona_one" android:textColor="#FFFFFF" android:textOff="@string/alex_katz"
                android:textOn="@string/alex_katz" android:onClick="katzClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextBtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.97" android:background="@drawable/toggle_btn"
            android:textSize="24sp" android:fontFamily="@font/krona_one" android:onClick="doneClicked"/>

</androidx.constraintlayout.widget.ConstraintLayout>